@@ -98,3 +98,4 @@ Fixes/Patches incorporated from:
 	Carlos (CJ) Vergara
 	Benno Lange
 	Georgiy Kirichenko
+	Chae Young-ku
